[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/Game.gd" type="Script" id=1]
[ext_resource path="res://scenes/ground/Ground.gd" type="Script" id=2]
[ext_resource path="res://scenes/ground/GroundMesh.tscn" type="PackedScene" id=3]
[ext_resource path="res://samples/arm1.wav" type="AudioStream" id=4]
[ext_resource path="res://samples/explosion3.wav" type="AudioStream" id=5]
[ext_resource path="res://samples/hit4.wav" type="AudioStream" id=6]
[ext_resource path="res://samples/shoot1.wav" type="AudioStream" id=7]
[ext_resource path="res://samples/explosion5.wav" type="AudioStream" id=8]
[ext_resource path="res://samples/hit2.wav" type="AudioStream" id=9]
[ext_resource path="res://samples/shoot5.wav" type="AudioStream" id=10]
[ext_resource path="res://gui/theme.tres" type="Theme" id=11]

[node name="Game" type="Spatial"]

pause_mode = 2
script = ExtResource( 1 )

[node name="Other" type="Spatial" parent="."]

pause_mode = 1
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="DirectionalLight" type="DirectionalLight" parent="."]

pause_mode = 1
transform = Transform( 0.992546, -0.121869, 0, 0.100235, 0.816351, 0.568791, -0.0693182, -0.564551, 0.822483, 0, 69.7484, -5.81702 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 0.9
light_indirect_energy = 0.9
light_negative = false
light_specular = 0.5
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.1
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
directional_shadow_mode = 2
directional_shadow_split_1 = 0.1
directional_shadow_split_2 = 0.2
directional_shadow_split_3 = 0.5
directional_shadow_blend_splits = false
directional_shadow_normal_bias = 0.8
directional_shadow_bias_split_scale = 0.25
directional_shadow_depth_range = 0
directional_shadow_max_distance = 200.0
_sections_unfolded = [ "Light" ]

[node name="DirectionalLight1" type="DirectionalLight" parent="."]

pause_mode = 1
transform = Transform( 1.32322, 0, 0, 0, -2.1558e-07, -1.32323, 0, 1.32322, -2.15581e-07, 0, -17.0043, -5.81702 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 1.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.1
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
directional_shadow_mode = 2
directional_shadow_split_1 = 0.1
directional_shadow_split_2 = 0.2
directional_shadow_split_3 = 0.5
directional_shadow_blend_splits = false
directional_shadow_normal_bias = 0.8
directional_shadow_bias_split_scale = 0.25
directional_shadow_depth_range = 0
directional_shadow_max_distance = 200.0
_sections_unfolded = [ "Light" ]

[node name="Ground" type="Spatial" parent="."]

pause_mode = 1
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -70, 0 )
script = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="GroundMesh" parent="Ground" instance=ExtResource( 3 )]

_sections_unfolded = [ "Transform", "Visibility" ]

[node name="GroundMesh 2" parent="Ground" instance=ExtResource( 3 )]

transform = Transform( 1000, 0, 0, 0, 1000, 0, 0, 0, 1000, 0, 0, -20115 )
_sections_unfolded = [ "Pause", "Transform", "Visibility" ]

[node name="SoundMonsterArm" type="AudioStreamPlayer" parent="."]

pause_mode = 1
stream = ExtResource( 4 )
volume_db = -20.0
autoplay = false
mix_target = 0
bus = "Master"
_sections_unfolded = [ "Pause" ]

[node name="SoundMonsterExplosion" type="AudioStreamPlayer" parent="."]

pause_mode = 1
stream = ExtResource( 5 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"
_sections_unfolded = [ "Pause" ]

[node name="SoundMonsterHit" type="AudioStreamPlayer" parent="."]

pause_mode = 1
stream = ExtResource( 6 )
volume_db = -20.0
autoplay = false
mix_target = 0
bus = "Master"
_sections_unfolded = [ "Pause" ]

[node name="SoundMonsterShoot" type="AudioStreamPlayer" parent="."]

pause_mode = 1
stream = ExtResource( 7 )
volume_db = -20.0
autoplay = false
mix_target = 0
bus = "Master"
_sections_unfolded = [ "Pause" ]

[node name="SoundPlayerExplosion" type="AudioStreamPlayer" parent="."]

pause_mode = 1
stream = ExtResource( 8 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"
_sections_unfolded = [ "Pause" ]

[node name="SoundPlayerHit" type="AudioStreamPlayer" parent="."]

pause_mode = 1
stream = ExtResource( 9 )
volume_db = -20.0
autoplay = false
mix_target = 0
bus = "Master"
_sections_unfolded = [ "Pause" ]

[node name="SoundPlayerShoot" type="AudioStreamPlayer" parent="."]

pause_mode = 1
stream = ExtResource( 10 )
volume_db = -20.0
autoplay = false
mix_target = 0
bus = "Master"
_sections_unfolded = [ "Pause" ]

[node name="Hud" type="Container" parent="."]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor" ]

[node name="PlayButton" type="Button" parent="Hud"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 384.0
margin_top = 400.0
margin_right = 640.0
margin_bottom = 500.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 11 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "PLAY"
flat = false
_sections_unfolded = [ "Anchor", "Focus", "Mouse", "Rect", "Theme", "custom_fonts" ]

[node name="GameOverHud" type="Control" parent="Hud"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="GameOverLabel" type="Label" parent="Hud/GameOverHud"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 256.0
margin_top = 100.0
margin_right = 768.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 11 )
text = "GAME OVER"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme" ]

[node name="GameOverReloadButton" type="Button" parent="Hud/GameOverHud"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 384.0
margin_top = 400.0
margin_right = 640.0
margin_bottom = 500.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 11 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "oh well"
flat = false
_sections_unfolded = [ "Anchor", "Focus", "Mouse", "Rect", "Theme", "custom_fonts" ]

[node name="WinHud" type="Control" parent="Hud"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="WinLabel" type="Label" parent="Hud/WinHud"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 100.0
margin_right = 1024.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 11 )
text = "YOU DEFEATED THE MONSTER"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Grow Direction", "Rect", "Theme" ]

[node name="WinReloadButton" type="Button" parent="Hud/WinHud"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 384.0
margin_top = 400.0
margin_right = 640.0
margin_bottom = 500.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 11 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "YEAH!"
flat = false
_sections_unfolded = [ "Anchor", "Focus", "Mouse", "Rect", "Theme", "custom_fonts" ]

[connection signal="pressed" from="Hud/PlayButton" to="." method="_on_PlayButton_pressed"]

[connection signal="pressed" from="Hud/GameOverHud/GameOverReloadButton" to="." method="_on_ReloadButton_pressed"]

[connection signal="pressed" from="Hud/GameOverHud/GameOverReloadButton" to="." method="_on_GameOverReloadButton_pressed"]

[connection signal="pressed" from="Hud/WinHud/WinReloadButton" to="." method="_on_ReloadButton_pressed"]

[connection signal="pressed" from="Hud/WinHud/WinReloadButton" to="." method="_on_WinReloadButton_pressed"]


